# Campus-Courier

./: README.md  dependencies.repos  dependencies_foxy.repos  dependencies_humble.repos
camco_description/: CMakeLists.txt  package.xml
camco_description/launch/: camco_description.launch  camco_description.launch.py
camco_description/meshes/: Jetson Nano holder v1.stl  Lidar platform v2.stl  Lidar platform v3.stl  lower_platform.stl  upper_platform.stl
camco_description/rviz/: model.rviz
camco_description/urdf/: camco.urdf.xacro  camco_platform.urdf.xacro
camco_description/urdf/sensors/: rplidar.urdf.xacro
camco_frontend/: address_book.json  index.css  index.html  index.js  login.css  login.html  login.js  mission.css  mission.html  mission.js  package-lock.json  package.json
camco_kobuki_interface/: package.xml  setup.cfg  setup.py
camco_kobuki_interface/camco_kobuki_interface/: read_battery_state.py
camco_launch/: CMakeLists.txt  package.xml
camco_launch/config/: cmd_vel_mux_params.yaml
camco_launch/launch/: camco.launch.py  rplidar.launch.py
camco_launch/rviz/: camco.rviz
camco_mission/: package.xml  setup.cfg  setup.py
camco_mission/camco_mission/: camco_mission.py  camco_resolver.py  redirect_mission_status.py
camco_mission/launch/: camco_mission.launch.py
camco_mission/resource/lookup/: address_book.yaml  room_numbers.yaml
camco_msgs/: CMakeLists.txt  package.xml
camco_msgs/msg/: NavToPoseFeedback.msg  NavToPoseStatus.msg  RoomAddress.msg
camco_msgs/srv/: ReadBatteryState.srv
camco_navigation/: CMakeLists.txt  package.xml
camco_navigation/config/: localization.yaml  nav2.yaml  slam.yaml
camco_navigation/launch/: localization.launch.py  nav2.launch.py  navigation.launch.py  slam.launch.py
camco_navigation/maps/: all.pgm  all.yaml  all_old2.pgm  all_old3.pgm  corridor.pgm  corridor.yaml  m10_cor-modified.pgm  m10_cor.pgm  m10_cor.yaml  m5.pgm  m5.yaml  m8.pgm  m8.yaml  m8_2.pgm  m8_2.yaml  m9.pgm  m9.yaml  m9_m11.pgm  m9_m11.yaml  m9_m11_old.pgm  m9_m11_old2.pgm  test.pgm  test.yaml  w12.pgm  w12.yaml
camco_navigation/rviz/: camco_navigation.rviz
docker/deployment/: Dockerfile
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/camco_navigation/share/ament_index/resource_index/package_run_dependencies/: camco_navigation
install/camco_navigation/share/camco_navigation/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/camco_navigation/share/camco_navigation/cmake/: camco_navigationConfig.cmake
install/camco_navigation/share/camco_navigation/launch/: nav2.launch.py
log/: latest_build  latest_list
scripts/: camco_launch.service  camco_launch.sh  entrypoint.sh  rplidar.rules
test_bags/m5/: metadata.yaml
test_bags/m5_2/: m5_2_0.db3  metadata.yaml
test_bags/m5_8/: m5_8_0.db3  metadata.yaml
