<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camco_mission</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yazanrihan@gmail.com">patrolscouts</maintainer>
  <license>TODO: License declaration</license>

  <depend>camco_navigation</depend>
  <depend>geometry_msgs</depend>
  <depend>camco_kobuki_interface</depend>
  <depend>robot_pose_publisher_ros2</depend>
  <depend>rosbridge_server</depend>

  <exec_depend>camco_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
